--- a/_config.yml
+++ b/_config.yml
@@ -21,20 +21,18 @@
 title: 我的技术博客
 email: mingddww@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  简单的记录一下技术学习和实践过程
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://chatnothing.site" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: jekyllrb
+#github_username:  jekyll
 
 language: zh-CN
 
 # Build settings
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme # add this line to the plugins list if you already have one·
 
 # Exclude from processing.
 # The following items will not be processed, by default.
