--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ url: "https://chatnothing.site" # the base hostname & protocol for your site, e.
 #github_username:  jekyll
 
 # Build settings
+theme: jekyll-theme-slate
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one·
