--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ ssecrets.PERSONAL_GITHUB_TOKEN }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
