--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,16 +1,16 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: 我的技术博客
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description: 简单分享
 
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
-  image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
+  name: ming
+  image: 02.jpg
+  say-hello: Hello, I’m <strong>ming</strong>
   bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
 
 
