--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,11 +8,11 @@ description: 简单分享
 #-------------------------------
 # Author Settings
 author:
-  name: ming
+  name: 明月倚楼
   image: 06.jpg
-  say-hello: Hello, I’m <strong>ming</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
-
+  say-hello: Hello, 我是<strong>明月倚楼</strong>
+#  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
+  bio: 一个<strong>码农</strong>，喜欢<strong>编程</strong>，<strong>思考</strong>。
 
 #-------------------------------
 # Contact links
