--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://chatnoting.site" # the base hostname & protocol for your site, e.g. http://example.com
 
+repository: cintia09/Blogs
 
 # Build settings
 markdown: kramdown
